Fix for overflowing photos in Identify modal for Firefox.

--- a/app/assets/stylesheets/observations/identify/observation_modal.css.scss
+++ b/app/assets/stylesheets/observations/identify/observation_modal.css.scss
@@ -118,6 +118,7 @@ $galleryHeightElements: "
   flex: 2;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 .ObservationModal .sidebar {
   overflow-y: auto;
